// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";


import "google/protobuf/timestamp.proto";

package rocketcycle.proto;
option go_package = "github.com/lachlanorr/rocketcycle/build/proto/process";

message ApecsTxn {
    string id = 1;           // uuid of txn used for tracing and reporting
    Dir direction = 2;       // starts in forward, can potentially go to reverse if the transaction is reversible
    bool can_revert = 3;     // whether or not this transaction can be rolled back.

    repeated Step forward_steps = 4;  // filled upon creation with forward steps
    repeated Step reverse_steps = 5;  // upon an error in a "can_revert==true" transaction, this gets filled with the right rollback steps. Separatiing reverse from forward steps preserves the history for review of the nature of the failure.

    enum Dir {
        FORWARD = 0;
        REVERSE = 1;
    }

    message Step {
        string app_name = 1;        // logical persistence model that's used to partition messages
        string key = 2;             // key into model to use for partitioning against the topic
        string command = 3;         // command name, this will map to a piece of code (e.g. function)
        repeated string params = 4; // paramters to the command function
        Status status = 5;          // status of this step, all start at pending, and can transition to complete, error, and rolled back
        MsgId msg_id = 6;           // kafka gives us a globally unique topic/partition/offset. topic is implied by model_name
        google.protobuf.Timestamp processed_time = 7; // actual time this command result was recorded
        google.protobuf.Timestamp effective_time = 8; // effective time, useful in some applications as it may make sense to deviate from processed_time for reporting purposes
        repeated string errors = 9; // general bucket for error messages that will effectively be the logged errors of this step

        enum Status {
            PENDING = 0;
            COMPLETE = 1;
            REVERTED = 2;
            ERROR = 3;
        }

        message MsgId {
            int32 partition = 1;
            int64 offset = 2;
        }
    }
}

message StorageModel {
    bytes model = 1;

    MostRecentOffsets mro = 2;
}

message MostRecentOffsets {
    int64 process_topic = 1;
    int64 process_offset = 2;
    int64 storage_topic = 3;
    int64 storage_offset = 4;
}
